# WISE

./: .gitignore  README.md  pyproject.toml
backend/openfhe/: CMakeLists.txt
backend/openfhe/bindings/python/: CMakeLists.txt  module.cpp  pyproject.toml
backend/openfhe/bindings/python/fhecore/: __init__.py
backend/openfhe/include/: context.hpp  ct_handle.hpp  utils.hpp
backend/openfhe/src/: CMakeLists.txt  context.cpp  ct_handle.cpp
clear/mnist/: HerPN.py  cnn_HerPN_avgpool_train.py  eval.py  mnist_cnn_herpn_avgpool_wo_padding_196.pth
config/: config.toml  mnist.toml  resnet34.toml  silu.toml  small.toml  tiny.toml  todo.md
pack/: mnist-toeplitz-pad.py  mnist-toeplitz.py  mnist-winograd.py  resnet34-toeplitz-rescale.py  resnet34-toeplitz.py  resnet34-winograd.py  resnet34_toeplitz_pack.py  resnet34_winograd_pack.py  resnet34_winograd_silu_avgpool_pack.py
runner/: clear.py  exp.sh  mnist.py  resnet34.py  silu.py  step.py
runner/temp-toeplitz/: layer4.pkl  pre.pkl
runner/temp-winograd/: check.py  final.pkl  layer1.pkl  layer2.pkl  layer3.pkl  layer4.pkl  pre.pkl
src/sagittarius/core/: __init__.py  avgpool2d.py  batchnorm2d.py  conv2d_toeplitz.py  conv2d_winograd.py  fully_connected.py  herpn.py  nonlinear.py  utils.py  winograd.py
src/sagittarius/test/: plot.py  test.py
